<resources>


    <string name="app_name">Working Time</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_worker">Workers</string>
    <string name="nav_company">Companies</string>
    <string name="nav_activity">Activities</string>
    <string name="nav_subTitle_report">Reporting</string>
    <string name="nav_reporting">Count of hours worked</string>
    <string name="choose_worker">Choose a worker</string>
    <string name="choose_company">Choose a company</string>
    <string name="choose_activity">Choose an activity</string>
    <string name="nav_task">Tasks</string>
    <string name="nav_subTitle_basicdata">Basic data</string>
    <string name="nav_subTitle_workcompleted">Tasks done</string>

    <string-array name="companies">
        <item>Clip Industrie</item>
        <item>HES-SO Valais</item>
    </string-array>
    <string-array name="workers">
        <item>Samuel</item>
        <item>Jacques</item>
    </string-array>
    <string-array name="activities">
        <item>Projet 1</item>
        <item>Projet 2</item>
    </string-array>

    <string-array name="dateFormat">
        <item>MM.dd.yyyy</item>
        <item>dd/MM/yyyy</item>
    </string-array>


    <string name="btn_readyToStart">Ready to start...</string>

    <string name="title_activity_tasks_list">Tasks list</string>

    <string name="worker_label">Worker : </string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="birthdate">Birthdate</string>
    <string name="worker_activated_hint">Activate this worker to make it available.</string>
    <string name="worker_activated">Worker available</string>

    <string name="title_activity_activities_list">Activities</string>
    <string name="activity_label">Activity : </string>
    <string name="title_activity_workers_list">Workers</string>
    <string name="title_activity_worker_view">Workers views</string>
    <string name="title_activity_worker_edit">Edit workers</string>

    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="action_back">Back</string>
    <string name="title_activity_view">Activities views</string>
    <string name="activity_name">Name</string>
    <string name="activity_activated">Activity available</string>
    <string name="title_activity_edit">Edit an activity</string>
    <string name="activity_activated_hint">Activate this activity to make it available.</string>
    <string name="title_activity_company_edit">Edit a compagny</string>

    <string name="title_activity_companies_list">Companies</string>
    <string name="company_label">Company : </string>
    <string name="company_name">Name</string>
    <string name="company_activated_hint">Activate this company to make it available.</string>
    <string name="company_activated">Company available</string>
    <string name="task_archive">Archived task</string>
    <string name="title_activity_company_view">Compagnies views</string>
    <string name="title_activity_task_view">Task views</string>
    <string name="title_activity_time_recording">Time records</string>
    <string name="btn_createTask">Finalize and create task</string>
    <string name="btn_StartToWork">Start to work</string>
    <string name="tgb_WorkBreak_OFF">Let\'s go working</string>
    <string name="tgb_WorkBreak_ON">Let\'s take a break</string>
    <string name="title_activity_edit_task">Edit a task</string>
    <string name="btn_start">GO</string>
    <string name="title_activity_company">Company</string>


    <string name="start_label">Start</string>
    <string name="duration_label">Duration</string>
    <string name="stop_label">Stop</string>
    <string name="timelist_label">Times list</string>
    <string name="title_activity_task">Task</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_french">French</string>
    <string name="action_english">English</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="_et_settings_date_format">Change date format</string>
    <string name="title_activity_settings__sam">Settings</string>
    <string name="_et_settings_language">Choose language</string>
</resources>
