<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_cancel"
        android:menuCategory="alternative"
        android:orderInCategory="100"
        android:title="@string/action_cancel"
        app:showAsAction="ifRoom|withText"></item>

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_done_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_save"
        app:showAsAction="ifRoom|withText"></item>

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom|withText"></item>


</menu>