<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="4dp"
    android:paddingBottom="4dp">
    <TextView
        android:id="@+id/tv_start"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:text="@string/start_label"/>

    <TextView
        android:id="@+id/tv_duration"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:textAlignment="center"
        android:text="@string/duration_label"/>

    <TextView
        android:id="@+id/tv_stop"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_alignParentRight="true"
        android:textAlignment="textEnd"
        android:text="@string/stop_label"/>

        <TextView
            android:id="@+id/tv_start_value"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_below="@id/tv_start"
            android:textColor="@android:color/black"
            android:text="00:00:00"/>
        <TextView
            android:id="@+id/tv_duration_value"
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_below="@id/tv_duration"
            android:text="00:00:00"/>

        <TextView
            android:id="@+id/tv_stop_value"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_below="@id/tv_stop"
            android:textColor="@android:color/black"
            android:layout_alignParentRight="true"
            android:textAlignment="textEnd"
            android:text="00:00:00"/>

</RelativeLayout>