<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_task_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ch.hevs.androidproject644.js.workingtime.TaskViewActivity"
    tools:showIn="@layout/task_view_activity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_worker_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/worker_label"
            android:layout_below="@+id/ll_head"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/tv_worker_name"
            android:background="@android:color/darker_gray"
            android:id="@+id/view" />
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/image_Sex"
            android:layout_below="@+id/tv_worker_name"/>

        <TextView
            android:id="@+id/tv_birthdate_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_firstname_lastname"
            android:layout_below="@+id/tv_firstname_lastname"
            tools:text="Birthdate : " />

        <TextView
            android:id="@+id/tv_birthdate_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_firstname_lastname"
            android:layout_toRightOf="@+id/tv_birthdate_name"
            android:textColor="@android:color/black"
            tools:text="17.07.1981" />

        <TextView
            android:id="@+id/tv_company_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/company_label"
            android:layout_below="@+id/image_Sex"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/tv_company_name"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/tv_activity_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textAlignment="textEnd"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/activity_label"
            android:layout_below="@+id/image_Sex"/>

        <TextView
            android:id="@+id/tv_activity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_activity_name"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_alignParentRight="true"
            android:textAlignment="textEnd"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:text="Activity name" />
        <TextView
            android:id="@+id/tv_timeslist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/timelist_label"
            android:layout_below="@+id/tv_activity_value"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_below="@+id/tv_timeslist_name"
            android:background="@android:color/darker_gray"/>
        <ListView
            android:id="@+id/lv_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_below="@id/tv_timeslist_name">
        </ListView>

        <TextView
            android:id="@+id/tv_company_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:text="Company name"
            android:layout_below="@+id/tv_company_name"
            android:layout_alignParentStart="true" />

        <LinearLayout
            android:id="@+id/ll_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_duration"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_very_big"
            android:text="8h25"
            android:layout_alignParentTop="true"
                android:layout_weight="1"/>-->

            <Switch
                android:layout_toRightOf="@+id/tv_duration"
                android:text="@string/task_archive"
                android:id="@+id/sw_task_archive"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_firstname_lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:text="Firstname Lastname"
            android:layout_alignTop="@+id/view"
            android:layout_toEndOf="@+id/tv_company_name" />
    </RelativeLayout>
</LinearLayout>
